--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Code AJ</title>
+    <script>
+window.codySettings = { widget_id: '99aa62c2-5a1a-4abb-81f9-26e20da63cf4' };
+
+!function(){
+    var t=window,e=document,a=function(){
+        var t=e.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://trinketsofcody.com/cody-widget.js";
+        var a=e.getElementsByTagName("script")[0];
+        a.parentNode.insertBefore(t,a)};
+    "complete"===document.readyState?a():t.attachEvent?t.attachEvent("onload",a):t.addEventListener("load",a,!1)}();
+</script>
 </head>
 <body>
     <header>
